--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <style>
       body { background-color: linen;}
       .mb1 { margin-bottom: 5px; }
+      .mr1 { margin-right: 5px; }
       .breakWord {  overflow-wrap: break-word; }
       </style>
    </head>
